# ibmi-mcp-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  RELEASING.md  package-lock.json  package.json  template_mcp.json
.bob/: custom_modes.yaml  mcp.json.example
.github/workflows/: docker-multiplatform.yml  docker-release.yml  publish.yml
agents/: README.md
agents/frameworks/agno/: README.md  ibmi_agentos.py  pyproject.toml
agents/frameworks/agno/src/ibmi_agents/: __init__.py
agents/frameworks/agno/src/ibmi_agents/agents/: __init__.py  agent_ids.py  agno_assist.py  base_agent.py  ibmi_agents.py  web_agent.py
agents/frameworks/agno/src/ibmi_agents/agents/utils/: __init__.py  model_selector.py
agents/test2sql/: .env.example  README.md  agentos.py  cli.py  pyproject.toml  text2sql_agent.py
app/: .gitignore  Dockerfile  pyproject.toml  requirements.txt  test_model_selector.py
app/agents/: agno_assist.py  web_agent.py
app/app/: main.py
app/workflows/: README.md  capacity_planning.py  find_service_example.py
apps/mcpgateway/: docker-compose.yml
client/: README.md  agent_stdio.py  general_agent.py  list_tools.py  mcp_client.py  pyproject.toml
docs/: configuration.mdx  docs.json  index.mdx  quickstart.mdx  setup-mapepire.mdx
docs/agents/: overview.mdx  security.mdx
docs/cli/: agent-integration.mdx  commands.mdx  configuration.mdx  getting-started.mdx  output-formats.mdx  overview.mdx  yaml-tools.mdx
docs/clients/: bob.mdx  claude-code.mdx  claude-desktop.mdx  cline.mdx  cursor.mdx  gemini-cli.mdx  overview.mdx  vscode.mdx
docs/concepts/: architecture.mdx  mcp-overview.mdx
docs/deployment/: docker.mdx  openshift.mdx  overview.mdx
docs/server-config/: ibmi-auth.mdx
docs/sql-tools/: building-tools.mdx  built-in-tools.mdx  output-formats.mdx  overview.mdx  parameter-guide.mdx  sources.mdx  (+5 more)
scripts/: make-executable.mjs  release-finalize.sh  release-prepare.sh  release-undo.sh  sync-workspace-versions.mjs  validate-config.ts
server/: .env.example  .versionrc.json  CHANGELOG.md  Dockerfile  README.md  package-lock.json  package.json
tools/: README.md
(+182 files in other folders)
