[project]
name = "test2sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.4.3",
    "anthropic>=0.76.0",
    "fastapi>=0.128.0",
    "mcp>=1.26.0",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.40.0",
]
