[project]
name = "text2sql-agent"
version = "0.1.0"
description = "IBM i Text-to-SQL Agent - Query Db2 for i databases using natural language"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.4.3",
    "anthropic>=0.76.0",
    "mcp>=1.26.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.46",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
]
